# comsolBmpPrint

./: CMakeLists.txt  README.md  bmpreader.cpp  bmpreader.h  main.cpp
